[package]
name = "etcd-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "*"
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["json", "env-filter", "fmt", "chrono", "local-time"]}

async-trait = "0.1.80"
anyhow = "1"
etcd-client = "0.13.0"
chrono = "0"
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"